--- a/mockUp/src/jade/layout.jade
+++ b/mockUp/src/jade/layout.jade
@@ -7,11 +7,12 @@ head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE-edge")
     block title
-        title Default title
+        title Resto-Rallye
     meta(name="description" content="")
     meta(name="viewport" content="width-device-width, initial-scale=1")
     link(rel="icon" type="image/png" href="")
-    link(rel="stylesheet" href="css/screen.css")
+    block stylesheet
+        link(rel="stylesheet" href="css/screen.css")
     script(src="js/vendor/modernizr-2.6.2.min.js")
     link(src="http://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" type="text/css")
         
