--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -14,19 +14,21 @@ block header
                     a(href="html/rallye.html") Rallye
                 li.banners
                     a(href="index.html")
-                        img(src="", alt="Banners Resto Rallye")
+                        img(src="css/images/Ecusson.png", alt="Banners Resto Rallye")
                 li
                     a(href="html/blog.html") Blog
                 li
                     a(href="html/contact.html") Contact
                 
-
+block thumbnail
+    section.thumbnail
+        img(src="css/images/backgroundImage.jpg", alt="Image thumbnail")
+        blockquote
+            | Le prochain rallye sera dans 
+            span 7 jours, 
+            | n'oubliez pas de vous 
+            a(href="") inscrire    
 block content
-    blockquote
-        | Le prochain rallye sera dans 
-        span 7 jours, 
-        | n'oubliez pas de vous 
-        a(href="") inscrire
     section
         h2 Explicatif Resto - Rallye
         div.info
