--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -8,6 +8,10 @@
 	-moz-border-radius:    $radius
 	-ms-border-radius:     $radius
 	border-radius:         $radius
+=box-shadows( $angle, $blur, $color, $opa )
+	-webkit-box-shadow: $angle $angle $blur 0px rgba($color, $color, $color, $opa)
+	-moz-box-shadow:    $angle $angle $blur 0px rgba($color, $color, $color, $opa)
+	box-shadow:         $angle $angle $blur 0px rgba($color, $color, $color, $opa)
 =grayScale( $level )
 	-webkit-filter: grayscale( $level )
 	-moz-filter: 	grayscale( $level )
