init Parallax on index.html
Base of parallax, need upgrade

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -19,37 +19,14 @@ block header
                     a(href="html/blog.html") Blog
                 li
                     a(href="html/contact.html") Contact
-                
-block thumbnail
-    section.thumbnail
-        img(src="css/images/backgroundImage.jpg", alt="Image thumbnail")
-        blockquote
-            | Le prochain rallye sera dans 
-            span 7 jours, 
-            | n'oubliez pas de vous 
-            a(href="") inscrire    
+                  
 block content
-    section
-        h2 Explicatif Resto - Rallye
-        div.info
-            h3 Resto-Rallye
-            p Existant depuis maintenant 10ans, nous sommes une bande de joyeux copains...
-        
-    section
-        h2 Partenaires
-        div.partenaire
-            h3 Nos partenaires
-            p Nous ne travaillons pas seul, à chaque évènement nous rencontrons de nouveau gérant de restaurant heureux d'accueillir nos resto-ralliens. Voici ici un aperçu des meilleurs traiteurs que nous ayons rencontré
-            ol
-                li
-                    a(href="#")
-                        img(src="css/images/test.jpeg", alt="Logo restaurant")
-                li
-                    a(href="#")
-                        img(src="css/images/test.jpeg", alt="Logo restaurant")
-                li
-                    a(href="#")
-                        img(src="css/images/test.jpeg", alt="Logo restaurant")
+    div#slide1.slide
+        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
+    div#slide2.slide
+        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
+    div#slide3.slide
+        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
 
 block footer
     footer
