--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -54,10 +54,16 @@ table {
 
 html {
   font: 16px/1.5 "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
-  position: relative;
+  perspective: 1px;
+  transform-style: preserve-3d;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -68,10 +74,6 @@ h2 {
 nav {
   background: #4bcbf2;
   padding: 0.25em 0;
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
 }
 nav ul {
   text-align: center;
@@ -104,15 +106,42 @@ nav a {
   position: absolute;
   top: -8em;
   left: 0;
+  z-index: 9999;
 }
 
-.thumbnail {
-  height: 600px;
-  overflow: hidden;
+.slide {
+  position: relative;
+  padding: 25vh 10%;
+  min-height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8);
+  transform-style: inherit;
 }
-.thumbnail img {
-  display: block;
-  width: 100%;
+.slide:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+#slide1:before {
+  background-image: url("images/backgroundImage.jpg");
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
+}
+
+#slide2 {
+  background-image: url("images/backgroundImage2.jpg");
+  background-attachment: fixed;
+}
+
+#slide3:before {
+  background-image: url("images/backgroundImage3.jpg");
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
 }
 
 /*# sourceMappingURL=screen.css.map */
