--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -66,8 +66,7 @@ nav
     transform: translateZ(-1px) scale(2)
     z-index: -1
 #slide2
-    background-image: url("images/backgroundImage2.jpg")
-    background-attachment: fixed
+    background: white
 #slide3:before
     background-image: url("images/backgroundImage3.jpg")
     transform: translateZ(-1px) scale(2)
