--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -73,13 +73,13 @@ h2 {
 
 nav {
   background: #4bcbf2;
-  padding: 0.25em 0;
+  padding: 0.5em 0;
 }
 nav ul {
   text-align: center;
   border-top: 2px solid white;
   border-bottom: 2px solid white;
-  padding: 2.5em 0;
+  padding: 1.75em 0;
 }
 nav li {
   display: inline-block;
@@ -109,16 +109,13 @@ nav a {
   z-index: 9999;
 }
 
-.slide {
+.slideImage {
   position: relative;
-  padding: 25vh 10%;
-  min-height: 100vh;
-  width: 100vw;
+  min-height: 75vh;
   box-sizing: border-box;
-  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8);
   transform-style: inherit;
 }
-.slide:before {
+.slideImage:before {
   content: "";
   position: absolute;
   top: 0;
@@ -127,20 +124,24 @@ nav a {
   right: 0;
 }
 
-#slide1:before {
-  background-image: url("images/backgroundImage.jpg");
-  transform: translateZ(-1px) scale(2);
-  z-index: -1;
-}
-
-#slide2 {
+.slideText {
+  position: relative;
+  padding: 8vh 10%;
+  width: 100vw;
+  box-sizing: border-box;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8);
+  transform-style: inherit;
   background: white;
 }
 
-#slide3:before {
-  background-image: url("images/backgroundImage3.jpg");
-  transform: translateZ(-1px) scale(2);
-  z-index: -1;
+#slide1 {
+  background-image: url("images/backgroundImage.jpg");
+  background-attachment: fixed;
+}
+
+#slide3 {
+  background-image: url("images/backgroundImage1.jpg");
+  background-attachment: fixed;
 }
 
 /*# sourceMappingURL=screen.css.map */
