--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -21,21 +21,20 @@ block header
                     a(href="html/contact.html") Contact
                   
 block content
-    div#slide1.slide
-        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
-    div#slide2.slide
-        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
-    div#slide3.slide
-        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
-
+    div#slide1.slideImage
+    div.slideText
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
+    div#slide3.slideImage
+        
 block footer
-    footer
-        p
-            | designed by&nbsp;
-            a(href="http://portfolio.simon-leyder.be/") Simon Leyder
-            | &nbsp;and&nbsp;
-            a(href="http://luc-matagne.be/Portfolio/") Luc Matagne
-            |  &nbsp;at 2014
+    div.slideText
+        footer
+            p
+                | designed and created by&nbsp;
+                a(href="http://portfolio.simon-leyder.be/") Simon Leyder
+                | &nbsp;and&nbsp;
+                a(href="http://luc-matagne.be/Portfolio/") Luc Matagne
+                |  &nbsp;at 2014
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
     script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
