--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -16,15 +16,14 @@ body
     overflow-x: hidden
 h2
     +getOffMyPage()
-
 nav
     background: $headerBackground
-    padding: 0.25em 0
+    padding: 0.5em 0
     ul
         text-align: center
         border-top: 2px solid white
         border-bottom: 2px solid white
-        padding: 2.5em 0
+        padding: 1.75em 0
     li
         display: inline-block
         padding: 0 1em
@@ -46,13 +45,10 @@ nav
         left: 0
         z-index: 9999
 //Pure CSS - Parallax
-.slide
+.slideImage
     position: relative
-    padding: 25vh 10%
-    min-height: 100vh
-    width: 100vw
+    min-height: 75vh
     box-sizing: border-box
-    box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8)
     transform-style: inherit
     &:before
         content: ""
@@ -61,16 +57,20 @@ nav
         left: 0
         bottom: 0
         right: 0
-#slide1:before
-    background-image: url("images/backgroundImage.jpg")
-    transform: translateZ(-1px) scale(2)
-    z-index: -1
-#slide2
+.slideText
+    position: relative
+    padding: 8vh 10%
+    width: 100vw
+    box-sizing: border-box
+    box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8)
+    transform-style: inherit
     background: white
-#slide3:before
-    background-image: url("images/backgroundImage3.jpg")
-    transform: translateZ(-1px) scale(2)
-    z-index: -1
+#slide1
+    background-image: url("images/backgroundImage.jpg")
+    background-attachment: fixed
+#slide3
+    background-image: url("images/backgroundImage1.jpg")
+    background-attachment: fixed
 
 //@import 'tablette'
 //@import 'smartphone'
