Header stick in scroll
Correction CSS + add js

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -24,7 +24,11 @@ block content
     div#slide1.slideImage
     div.slideText
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
+    div#slide2.slideImage
+    div.slideText
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
     div#slide3.slideImage
+    
         
 block footer
     div.slideText
@@ -38,4 +42,4 @@ block footer
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
     script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-    script(src="js/script-min.js")
+    script(src="js/script.min.js")
