--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -59,7 +59,6 @@ html {
 }
 
 body {
-  perspective: 1px;
   transform-style: preserve-3d;
   height: 100%;
   overflow-y: scroll;
@@ -71,9 +70,17 @@ h2 {
   display: none;
 }
 
+.stick {
+  margin-top: 0;
+}
+
 nav {
   background: #4bcbf2;
+  margin-top: 1em;
   padding: 0.5em 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 nav ul {
   text-align: center;
@@ -111,7 +118,7 @@ nav a {
 
 .slideImage {
   position: relative;
-  min-height: 75vh;
+  min-height: 85vh;
   box-sizing: border-box;
   transform-style: inherit;
 }
@@ -139,8 +146,13 @@ nav a {
   background-attachment: fixed;
 }
 
-#slide3 {
+#slide2 {
   background-image: url("images/backgroundImage1.jpg");
+  background-attachment: fixed;
+}
+
+#slide3 {
+  background-image: url("images/backgroundImage2.jpg");
   background-attachment: fixed;
 }
 
