--- a/mockUp/src/sass/_colors.sass
+++ b/mockUp/src/sass/_colors.sass
@@ -1,7 +1,9 @@
 //Background Color
 $headerBackground: #4bcbf2
+$slideText: #fbfbfb
 
 //Font Color
-
+$headerColor: #ffffff
 
 //Border Color
+$borderMenuTop: #fbfbfb
