--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -21,6 +21,10 @@
 	font-family: $headFont
 	font-size: $size
 	text-transform: uppercase
+=footerFontStyle( $size )
+	font-family: $footFont
+	font-size: $size
+	font-size: italic
 =clearFloat()
 	display: block
 	clear: both
