--- a/mockUp/src/sass/_rules.sass
+++ b/mockUp/src/sass/_rules.sass
@@ -4,4 +4,5 @@
 //My font
 $regularFont: 16px/1.5 "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $headFont: "Titillium Web", sans-serif
+$footFont: "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $quoteFont: "Georgia", "Times New Roman", "Times", serif
