--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -72,11 +72,22 @@ h2 {
 
 .stick {
   margin-top: 0;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.stick ul {
+  padding: 1em 0;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 nav {
   background: #4bcbf2;
-  margin-top: 1em;
+  margin-top: 1.5em;
   padding: 0.5em 0;
   position: fixed;
   width: 100%;
@@ -84,14 +95,14 @@ nav {
 }
 nav ul {
   text-align: center;
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
+  border-top: 2px solid #fbfbfb;
+  border-bottom: 2px solid #fbfbfb;
   padding: 1.75em 0;
 }
 nav li {
   display: inline-block;
   padding: 0 1em;
-  color: white;
+  color: #ffffff;
   font-family: "Titillium Web", sans-serif;
   font-size: 1.25em;
   text-transform: uppercase;
@@ -138,7 +149,7 @@ nav a {
   box-sizing: border-box;
   box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8);
   transform-style: inherit;
-  background: white;
+  background: #fbfbfb;
 }
 
 #slide1 {
@@ -154,6 +165,12 @@ nav a {
 #slide3 {
   background-image: url("images/backgroundImage2.jpg");
   background-attachment: fixed;
+}
+
+footer h4 {
+  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-size: 1.15em;
+  font-size: italic;
 }
 
 /*# sourceMappingURL=screen.css.map */
