--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -15,24 +15,30 @@ body
     overflow-x: hidden
 h2
     +getOffMyPage()
+
+//Style header
 .stick
     margin-top: 0
+    +transition( all, 0.5s )
+    ul
+        padding: 1em 0
+        +transition( all, 0.5s )
 nav
     background: $headerBackground
-    margin-top: 1em
+    margin-top: 1.5em
     padding: 0.5em 0
     position: fixed
     width: 100%
     z-index: 1
     ul
         text-align: center
-        border-top: 2px solid white
-        border-bottom: 2px solid white
+        border-top: 2px solid $borderMenuTop
+        border-bottom: 2px solid $borderMenuTop
         padding: 1.75em 0
     li
         display: inline-block
         padding: 0 1em
-        color: white
+        color: $headerColor
         +headFontStyle( 1.25em )
     a
         text-decoration: none
@@ -49,6 +55,7 @@ nav
         top: -8em
         left: 0
         z-index: 9999
+
 //Pure CSS - Parallax
 .slideImage
     position: relative
@@ -69,7 +76,7 @@ nav
     box-sizing: border-box
     box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8)
     transform-style: inherit
-    background: white
+    background: $slideText
 #slide1
     background-image: url("images/backgroundImage.jpg")
     background-attachment: fixed
@@ -79,6 +86,11 @@ nav
 #slide3
     background-image: url("images/backgroundImage2.jpg")
     background-attachment: fixed
+
+//Style footer
+footer
+    h4
+        +footerFontStyle( 1.15em )
 
 //@import 'tablette'
 //@import 'smartphone'
