--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -58,12 +58,13 @@ block footer
                 form
                     input(type="text" placeholder="votre@mail.com")
                     input(type="submit" value="S'inscrire")
+        div.designed
             p
-                | designed and created by&nbsp;
-                a(href="http://portfolio.simon-leyder.be/") Simon Leyder
-                | &nbsp;and&nbsp;
+                | Designed and created by&nbsp;
                 a(href="http://luc-matagne.be/Portfolio/") Luc Matagne
-                |  &nbsp;at 2014
+                | &nbsp;and&nbsp;
+                a(href="http://portfolio.simon-leyder.be/") Simon Leyder
+                |  &nbsp;@ 2014
 
     script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
     script(src="js/script.min.js")
