--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -24,7 +24,7 @@
 =footerFontStyle( $size )
 	font-family: $footFont
 	font-size: $size
-	font-size: italic
+	font-style: italic
 =clearFloat()
 	display: block
 	clear: both
