--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -23,7 +23,7 @@ block header
 block content
     div#slide1.slideImage
     div.slideText
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
+        h3 titre test
     div#slide2.slideImage
     div.slideText
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
@@ -31,7 +31,7 @@ block content
     
         
 block footer
-    div.slideText
+    div.slideText.myFooter
         footer
             section.nav
                 h4 Navigation
@@ -45,16 +45,16 @@ block footer
                     li
                         a(href="html/contact.html") Contact
             section.looking
-                h4 Nous contacter
+                h4 Notre adresse
             section.follow
-                h4 Rejoingez-nous
+                h4 Suivez-nous
                 ul
                     li
                         a(href="#") RSS
                     li
                         a(href="#") Facebook
             section.newsletter
-                h4 Inscrivez-vous à la NewsLetter
+                h4 NewsLetter
                 form
                     input(type="text" placeholder="votre@mail.com")
                     input(type="submit" value="S'inscrire")
