--- a/mockUp/src/sass/_colors.sass
+++ b/mockUp/src/sass/_colors.sass
@@ -1,9 +1,14 @@
 //Background Color
-$headerBackground: #4bcbf2
+$headerBackground: #3498db
+$footerBackground: #ffffff
 $slideText: #fbfbfb
 
 //Font Color
+$color: #7f8c8d
 $headerColor: #ffffff
+$headingColor: #677171
+$linkColor: #3498db
+$hoverLinkColor: #90b4c5
 
 //Border Color
 $borderMenuTop: #fbfbfb
