--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -21,10 +21,11 @@
 	font-family: $headFont
 	font-size: $size
 	text-transform: uppercase
-=footerFontStyle( $size )
-	font-family: $footFont
+=headingStyle( $size )
+	font-family: $headingFont
 	font-size: $size
-	font-style: italic
+	font-weight: 100
+	color: $headingColor
 =clearFloat()
 	display: block
 	clear: both
