--- a/mockUp/src/jade/layout.jade
+++ b/mockUp/src/jade/layout.jade
@@ -15,6 +15,7 @@ head
         link(rel="stylesheet" href="css/screen.css")
     script(src="js/vendor/modernizr-2.6.2.min.js")
     link(src="http://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" type="text/css")
+    link(src="http://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet" type="text/css")
         
 body
     block header
