--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -13,8 +13,17 @@ body
     height: 100%
     overflow-y: scroll
     overflow-x: hidden
+    color: $color
 h2
     +getOffMyPage()
+h1, h2, h3, h4, h5, h6
+    +headingStyle( 1.5em )
+a
+    color: $linkColor
+    +transition( all, 0.25s )
+    &:hover
+        color: $hoverLinkColor
+        text-decoration: none
 
 //Style header
 .stick
@@ -77,6 +86,7 @@ nav
     box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8)
     transform-style: inherit
     background: $slideText
+//Images Parallax accueil
 #slide1
     background-image: url("images/backgroundImage.jpg")
     background-attachment: fixed
@@ -91,15 +101,21 @@ nav
 footer
     section
         display: block
-        width: 20%
+        width: 16%
         float: left
-    .newsletter
-        float: right
+        margin-right: 0.5em
     &:after
         +clearFloat()
+    li
+        padding: 0.15em 0
 h4
     padding-bottom: 1em
-    +footerFontStyle( 1.15em )
+    +headingStyle( 1.15em )
+.myFooter
+    background-color: $footerBackground
+.newsletter
+    float: right
+    margin: 0
 .designed
     font-size: 0.85em
     padding-top: 2em
