--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -23,7 +23,7 @@ block header
 block content
     div#slide1.slideImage
     div.slideText
-        h3 titre test
+        h3 Titre tet
     div#slide2.slideImage
     div.slideText
         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
