Style newsletter OK

--- a/mockUp/src/sass/_colors.sass
+++ b/mockUp/src/sass/_colors.sass
@@ -1,7 +1,7 @@
 //Background Color
 $headerBackground: #3498db
 $footerBackground: #ffffff
-$slideText: #fbfbfb
+$slideText: #f0f0f0
 
 //Font Color
 $color: #7f8c8d
@@ -12,3 +12,7 @@ $hoverLinkColor: #90b4c5
 
 //Border Color
 $borderMenuTop: #fbfbfb
+
+//Form Color
+$backgroundFormColor: #eeeeee
+$focusBackgroundFormColor: #f5f5f5
