--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -3,11 +3,11 @@
 	-moz-transition:    $where $times
 	-ms-transition:     $where $times
 	transition:         $where $times
-=border-radius( $radius1, $radius2, $radius3, $radius4 )
-	-webkit-border-radius: $radius1 $radius2 $radius3 $radius4
-	-moz-border-radius:    $radius1 $radius2 $radius3 $radius4
-	-ms-border-radius:     $radius1 $radius2 $radius3 $radius4
-	border-radius:         $radius1 $radius2 $radius3 $radius4
+=border-radius( $radius )
+	-webkit-border-radius: $radius
+	-moz-border-radius:    $radius
+	-ms-border-radius:     $radius
+	border-radius:         $radius
 =box-shadows( $angle, $blur, $color, $opa )
 	-webkit-box-shadow: $angle $angle $blur 0px rgba($color, $color, $color, $opa)
 	-moz-box-shadow:    $angle $angle $blur 0px rgba($color, $color, $color, $opa)
