--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -177,7 +177,7 @@ nav a:hover {
   box-sizing: border-box;
   box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8);
   transform-style: inherit;
-  background: #fbfbfb;
+  background: #f0f0f0;
 }
 
 #slide1 {
@@ -227,31 +227,40 @@ h4 {
   float: right;
   margin: 0;
 }
+.newsletter form {
+  position: relative;
+}
 .newsletter input[type=text] {
-  width: 80%;
-  float: left;
-  padding: 0.5em 1em;
+  width: 100%;
+  border: none;
+  padding: 1em 1.5em;
+  background-color: #eeeeee;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  border-radius: 0.5em;
   box-sizing: border-box;
-  -webkit-border-radius: 0.5em 0 0 0.5em;
-  -moz-border-radius: 0.5em 0 0 0.5em;
-  -ms-border-radius: 0.5em 0 0 0.5em;
-  border-radius: 0.5em 0 0 0.5em;
+}
+.newsletter input[type=text]:focus {
+  outline: none;
+  background-color: #f5f5f5;
 }
 .newsletter input[type=submit] {
-  color: #7f8c8d;
-  width: 20%;
-  float: right;
-  padding: 0.5em 1em;
-  -webkit-border-radius: 0 0.5em 0.5em 0;
-  -moz-border-radius: 0 0.5em 0.5em 0;
-  -ms-border-radius: 0 0.5em 0.5em 0;
-  border-radius: 0 0.5em 0.5em 0;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  width: 25px;
+  height: 25px;
+  text-indent: -100em;
+  border: none;
+  background: url("images/arrow.png") no-repeat center;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  border-radius: 0.5em;
 }
 .newsletter input[type=submit]:hover {
   cursor: pointer;
-}
-.newsletter input[type="text"]:focus, .newsletter input[type="password"]:focus, .newsletter textarea:focus {
-  outline: none;
 }
 .newsletter:after {
   display: block;
