Message d'erreur OK

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -58,6 +58,7 @@ block footer
                 form
                     input(type="text" placeholder="votre@mail.com")
                     input(type="submit" value="S'inscrire")
+                    span.error Il y a une faute de frappe bitchies
         div.designed
             p
                 | Designed and created by&nbsp;
