--- a/mockUp/src/sass/_colors.sass
+++ b/mockUp/src/sass/_colors.sass
@@ -1,7 +1,7 @@
 //Background Color
 $headerBackground: #3498db
 $footerBackground: #ffffff
-$slideText: #f0f0f0
+$slideText: #ffffff
 
 //Font Color
 $color: #7f8c8d
@@ -9,9 +9,12 @@ $headerColor: #ffffff
 $headingColor: #677171
 $linkColor: #3498db
 $hoverLinkColor: #90b4c5
+$errorColor: #c0392b
 
 //Border Color
 $borderMenuTop: #fbfbfb
+$borderError: #c0392b
+$borderErrorT: rgba(194, 47, 43, 0)
 
 //Form Color
 $backgroundFormColor: #eeeeee
