--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -90,6 +90,47 @@ a:hover {
   text-decoration: none;
 }
 
+/*.error
+ * display: block
+ * color: $errorColor
+ * margin-top: 1em
+ * padding: 0.5em 1em
+ * border-top: 1px solid $borderError
+ * text-align: center */
+.error {
+  display: block;
+  position: relative;
+  border-top: 1px solid #c0392b;
+  margin-top: 1.25em;
+  padding: 0.5em;
+  text-align: center;
+}
+
+.error:after, .error:before {
+  bottom: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.error:after {
+  border-color: rgba(194, 47, 43, 0);
+  border-bottom-color: #ffffff;
+  border-width: 10px;
+  margin-left: -10px;
+}
+
+.error:before {
+  border-color: rgba(194, 47, 43, 0);
+  border-bottom-color: #c0392b;
+  border-width: 12px;
+  margin-left: -12px;
+}
+
 .stick {
   margin-top: 0;
   -webkit-transition: all 0.5s;
@@ -177,7 +218,7 @@ nav a:hover {
   box-sizing: border-box;
   box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.8);
   transform-style: inherit;
-  background: #f0f0f0;
+  background: #ffffff;
 }
 
 #slide1 {
@@ -216,10 +257,6 @@ h4 {
   font-size: 1.15em;
   font-weight: 100;
   color: #677171;
-}
-
-.myFooter {
-  background-color: #ffffff;
 }
 
 .newsletter {
