--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -46,13 +46,20 @@ block footer
                         a(href="html/contact.html") Contact
             section.looking
                 h4 Notre adresse
+                p
+                    span Mail&nbsp;: 
+                    | adress@gmail.com
+                p
+                    span Téléphone&nbsp;: 
+                    | 0476 34 21 67
+                
             section.follow
                 h4 Suivez-nous
                 ul
-                    li
-                        a(href="#") RSS
-                    li
+                    li.fb
                         a(href="#") Facebook
+                    li.rss
+                        a(href="#") RSS
             section.newsletter
                 h4 NewsLetter
                 form
