--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -24,13 +24,6 @@ a
     &:hover
         color: $hoverLinkColor
         text-decoration: none
-/*.error
-    display: block
-    color: $errorColor
-    margin-top: 1em
-    padding: 0.5em 1em
-    border-top: 1px solid $borderError
-    text-align: center*/
 .error
     display: block
     position: relative
@@ -148,6 +141,33 @@ footer
 h4
     padding-bottom: 1em
     +headingStyle( 1.15em )
+.looking
+    p
+        padding-bottom: 0.85em
+        font-style: italic
+        &:last-child
+            padding: 0
+    span
+        display: block
+        padding-bottom: 0.3em
+        font-size: 0.85em
+        font-style: normal
+        font-weight: bold
+.follow
+    li
+        display: inline-block
+        text-indent: -100em
+        width: 35px
+        height: 35px
+        margin-right: 0.5em
+        opacity: 0.5
+        +transition( all, 0.25s )
+        &:hover
+            opacity: 1
+    .rss
+        background: url("images/sprite.png") -70px -10px
+    .fb
+        background: url("images/sprite.png") -10px -10px
 .newsletter
     width: 20%
     float: right
@@ -167,7 +187,7 @@ h4
     input[type=submit]
         position: absolute
         right: 5px
-        top: 5px
+        top: 7px
         width: 25px
         height: 25px
         text-indent: -100em
