--- a/mockUp/bin/css/screen.css
+++ b/mockUp/bin/css/screen.css
@@ -164,14 +164,11 @@ nav li {
 nav a {
   text-decoration: none;
   color: white;
-  -webkit-transition: all 0.25s;
-  -moz-transition: all 0.25s;
-  -ms-transition: all 0.25s;
-  transition: all 0.25s;
 }
 nav a:hover {
   color: white;
-  text-decoration: underline;
+  padding-bottom: 0.25em;
+  border-bottom: 1px solid white;
 }
 
 .banners {
