--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -78,10 +78,10 @@ nav
     a
         text-decoration: none
         color: white
-        +transition( all, 0.25s )
         &:hover
             color: white
-            text-decoration: underline
+            padding-bottom: 0.25em
+            border-bottom: 1px solid white
 .banners
     position: relative
     width: 160px
