Edit Lien header

--- a/mockUp/src/jade/blog.jade
+++ b/mockUp/src/jade/blog.jade
@@ -17,7 +17,7 @@ block header
                     a(href="rallye.html") Rallye
                 li.banners
                     a(href="../index.html")
-                        img(src="", alt="Banners Resto Rallye")
+                        img(src="../css/images/Ecusson.png", alt="Banners Resto Rallye")
                 li.focus
                     a(href="blog.html") Blog
                 li
