--- a/mockUp/src/jade/contact.jade
+++ b/mockUp/src/jade/contact.jade
@@ -13,11 +13,11 @@ block header
             ul
                 li
                     a(href="restaurant.html") Restaurant
-                li.focus
-                    a(href="rallye.html") Rallye
                 li
+                    a(href="rallye.html") Rallye
+                li.banners
                     a(href="../index.html")
-                        img(src="", alt="Banners Resto Rallye")
+                        img(src="../css/images/Ecusson.png", alt="Banners Resto Rallye")
                 li
                     a(href="blog.html") Blog
                 li.focus
