--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -22,6 +22,10 @@ block header
                   
 block content
     div#slide1.slideImage
+        blockquote 
+            | Ne manquez pas notre prochain 
+            a(href="#") Rendez-vous 
+            | dans la région de Namur
     div.slideText
         h3 Titre tet
     div#slide2.slideImage
