--- a/mockUp/src/sass/_colors.sass
+++ b/mockUp/src/sass/_colors.sass
@@ -9,6 +9,7 @@ $headerColor: #ffffff
 $headingColor: #677171
 $linkColor: #3498db
 $hoverLinkColor: #90b4c5
+$quoteColor: #eaeaea
 $errorColor: #c0392b
 
 //Border Color
