--- a/mockUp/src/jade/layout.jade
+++ b/mockUp/src/jade/layout.jade
@@ -14,8 +14,8 @@ head
     block stylesheet
         link(rel="stylesheet" href="css/screen.css")
     script(src="js/vendor/modernizr-2.6.2.min.js")
-    link(src="http://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" type="text/css")
     link(src="http://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet" type="text/css")
+    link(src="http://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" type="text/css")
         
 body
     block header
