--- a/mockUp/src/sass/_mixins.sass
+++ b/mockUp/src/sass/_mixins.sass
@@ -17,8 +17,8 @@
 	-moz-filter: 	grayscale( $level )
 	-ms-filter: 	grayscale( $level )
 	-o-filter: 		grayscale( $level )
-=headFontStyle( $size )
-	font-family: $headFont
+=menuFontStyle( $size )
+	font-family: $headingFont
 	font-size: $size
 	text-transform: uppercase
 =headingStyle( $size )
@@ -26,6 +26,12 @@
 	font-size: $size
 	font-weight: 100
 	color: $headingColor
+=quoteStyle( $size )
+	font-family: $quoteFont
+	font-size: $size
+	font-style: italic
+	font-weight: 400
+	color: $quoteColor
 =clearFloat()
 	display: block
 	clear: both
