Index.html finish

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -27,12 +27,30 @@ block content
             a(href="#") Rendez-vous 
             | dans la région de Namur
     div.slideText
-        h3 Titre tet
+        h3 Bienvenue au Resto-Rally
+        p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
     div#slide2.slideImage
-    div.slideText
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit vero dicta aut, consequuntur doloremque delectus. Voluptates atque consequuntur nam, doloremque soluta id odio fugit ipsam sunt maxime magni commodi?
+    div.slideText.slideRestaurant
+        h3 Nous vous conseillons ces adresses
+        div.restaurants
+            a(href="#")
+                h4 
+                    | Chez René, 
+                    span Liège
+                img(src="css/images/exempleRest.jpg", alt="")
+        div.restaurants
+            a(href="#")
+                h4 
+                    | Chez Norbert, 
+                    span Namur
+                img(src="css/images/exempleRest.jpg", alt="")
+        div.restaurants
+            a(href="#")
+                h4 
+                    | Chez Jean,  
+                    span Bruxelles
+                img(src="css/images/exempleRest.jpg", alt="")
     div#slide3.slideImage
-    
         
 block footer
     div.slideText.myFooter
