Correction Bug index

--- a/mockUp/src/jade/index.jade
+++ b/mockUp/src/jade/index.jade
@@ -26,7 +26,7 @@ block content
             | Ne manquez pas notre prochain 
             a(href="#") Rendez-vous 
             | dans la région de Namur
-    div.slideText
+    div.slideText.explain
         h3 Bienvenue au Resto-Rally
         p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
     div#slide2.slideImage
