--- a/mockUp/src/sass/screen.sass
+++ b/mockUp/src/sass/screen.sass
@@ -142,6 +142,9 @@ blockquote
     +quoteStyle( 2em )
     line-height: 1.25
     text-align: center
+.explain
+    p
+        margin-left: 0.85em
 .slideRestaurant
     &:after
         +clearFloat()
@@ -162,8 +165,6 @@ blockquote
     p
         text-align: center
         padding: 0.5em 0
-        span
-            display: block
 //Style footer
 footer
     section
